# L-BFGS-gradient-projection

./: CMakeCache.txt  CMakeLists.txt  L-BFGS-gp  L-BFGS-gp.cpp  Makefile  bfgs.sh  cmake_install.cmake  control.inp  jun13test1600-bfgs.txt  jun13test1600-final.txt  jun7test500-bfgs-gp.txt  jun7test500-bfgs.txt  jun7test500-final.txt  projection.h  qconvex  total-bfgs.txt
include/cppoptlib/: problem.h
include/cppoptlib/linesearch/: armijo.h  morethuente.h  wolfeheuristic.h
include/cppoptlib/solver/: lbfgsbsolver.h  lbfgssolver.h
include/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
